--- a/index.html
+++ b/index.html
@@ -1,10 +1,53 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="UTF-8">
-  <title>rock paper scissors</title>
-   <script src="external.js"></script>
-</head>
-<body>
-</body>
+	<head>
+		<meta charset="UTF-8">
+		<title>✊✋✌️</title>
+	  	<link rel="stylesheet" href="styles.css">
+		<script src="external.js" defer></script>
+	</head>
+
+	<body>
+		<header class="banner">
+			<h1>ROCK PAPER SCISSORS!!!!</h1>
+		</header>
+
+
+		<div id="context">
+			<h2>(First to 5 points wins)</h2>
+			<h1>Choose your move: </h1>
+		</div>
+
+		<div id="options">
+			<button id="rock">✊</button>
+			<button id="paper">✋</button>
+			<button id="scissors">✌️</button>
+		</div>
+		
+		<div id="result">Start playing</div>
+		<div id="move-played">
+			<span id="player-move">
+
+			</span>
+			<span id="computer-move">
+			
+			</span>
+		</div>
+		
+		<div id="scoreboard">
+			<span id="player">
+				<div>Player:</div>
+				<div id="plr-score">0</div>
+			</span>
+			<span id="computer">
+				<div>Computer:</div>
+				<div id="cmp-score">0</div>
+			</span>
+
+		</div>
+
+		<div id="final-result">
+
+		</div>
+	</body>
 </html>
